tests/custom-5.4.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.4.1-compliant
policies:
  - ../../../kyverno-policies/custom-5.4.1.yaml
resources:
  - namespace.yaml
results:
  - policy: custom-5-4-1-restrict-control-plane-endpoint
    rule: check-restrict-control-plane-endpoint
    resources:
      - compliant-ns
    kind: Namespace
    result: pass
